--- a/sct-project/sct-project-baseInfo/pom.xml
+++ b/sct-project/sct-project-baseInfo/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>sct-project</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>sct-project-service-one</artifactId>
+	<artifactId>sct-project-baseInfo</artifactId>
 
 	<dependencies>
 		<!-- 引入自己定义的api通用包，common -->
@@ -33,6 +33,14 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-hystrix</artifactId>
 		</dependency>
+		<dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
